// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Assets transforms example test case: browser-current-esm 1`] = `
Array [
  "esm/index-browser-current-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: current, Format: esm
import '../assets/styles-17df299b.css';
import '../assets/logo-c21f559f.svg';
import 'website/src/css/custom.css';
const json = {
  list: [\\"foo\\", \\"bar\\", \\"baz\\"],
  number: 123,
  string: \\"abc\\",
  object: {
    foo: true
  }
};
console.log(json);
",
]
`;

exports[`Assets transforms example test case: browser-current-esm 2`] = `
Array [
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets transforms example test case: browser-current-lib 1`] = `
Array [
  "lib/index-browser-current-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: current, Format: lib
'use strict';

require('../assets/styles-17df299b.css');

require('../assets/logo-c21f559f.svg');

require('website/src/css/custom.css');

const json = {
  list: [\\"foo\\", \\"bar\\", \\"baz\\"],
  number: 123,
  string: \\"abc\\",
  object: {
    foo: true
  }
};
console.log(json);
",
]
`;

exports[`Assets transforms example test case: browser-current-lib 2`] = `
Array [
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets transforms example test case: browser-experimental-esm 1`] = `
Array [
  "esm/index-browser-experimental-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: experimental, Format: esm
import '../assets/styles-17df299b.css';
import '../assets/logo-c21f559f.svg';
import 'website/src/css/custom.css';
const json = {
  list: [\\"foo\\", \\"bar\\", \\"baz\\"],
  number: 123,
  string: \\"abc\\",
  object: {
    foo: true
  }
};
console.log(json);
",
]
`;

exports[`Assets transforms example test case: browser-experimental-esm 2`] = `
Array [
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets transforms example test case: browser-experimental-lib 1`] = `
Array [
  "lib/index-browser-experimental-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: experimental, Format: lib
'use strict';

require('../assets/styles-17df299b.css');

require('../assets/logo-c21f559f.svg');

require('website/src/css/custom.css');

const json = {
  list: [\\"foo\\", \\"bar\\", \\"baz\\"],
  number: 123,
  string: \\"abc\\",
  object: {
    foo: true
  }
};
console.log(json);
",
]
`;

exports[`Assets transforms example test case: browser-experimental-lib 2`] = `
Array [
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets transforms example test case: browser-legacy-esm 1`] = `
Array [
  "esm/index-browser-legacy-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: legacy, Format: esm
import '../assets/styles-17df299b.css';
import '../assets/logo-c21f559f.svg';
import 'website/src/css/custom.css';
var json = {
  list: [\\"foo\\", \\"bar\\", \\"baz\\"],
  number: 123,
  string: \\"abc\\",
  object: {
    foo: true
  }
};
console.log(json);
",
]
`;

exports[`Assets transforms example test case: browser-legacy-esm 2`] = `
Array [
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets transforms example test case: browser-legacy-lib 1`] = `
Array [
  "lib/index-browser-legacy-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: legacy, Format: lib
'use strict';

require('../assets/styles-17df299b.css');

require('../assets/logo-c21f559f.svg');

require('website/src/css/custom.css');

var json = {
  list: [\\"foo\\", \\"bar\\", \\"baz\\"],
  number: 123,
  string: \\"abc\\",
  object: {
    foo: true
  }
};
console.log(json);
",
]
`;

exports[`Assets transforms example test case: browser-legacy-lib 2`] = `
Array [
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets transforms example test case: browser-stable-esm 1`] = `
Array [
  "esm/index-browser-stable-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: stable, Format: esm
import '../assets/styles-17df299b.css';
import '../assets/logo-c21f559f.svg';
import 'website/src/css/custom.css';
const json = {
  list: [\\"foo\\", \\"bar\\", \\"baz\\"],
  number: 123,
  string: \\"abc\\",
  object: {
    foo: true
  }
};
console.log(json);
",
]
`;

exports[`Assets transforms example test case: browser-stable-esm 2`] = `
Array [
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets transforms example test case: browser-stable-lib 1`] = `
Array [
  "lib/index-browser-stable-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: stable, Format: lib
'use strict';

require('../assets/styles-17df299b.css');

require('../assets/logo-c21f559f.svg');

require('website/src/css/custom.css');

const json = {
  list: [\\"foo\\", \\"bar\\", \\"baz\\"],
  number: 123,
  string: \\"abc\\",
  object: {
    foo: true
  }
};
console.log(json);
",
]
`;

exports[`Assets transforms example test case: browser-stable-lib 2`] = `
Array [
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets transforms example test case: native-current-lib 1`] = `
Array [
  "lib/index-native-current-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: current, Format: lib
'use strict';

require('../assets/styles-17df299b.css');

require('../assets/logo-c21f559f.svg');

require('website/src/css/custom.css');

const json = {
  list: [\\"foo\\", \\"bar\\", \\"baz\\"],
  number: 123,
  string: \\"abc\\",
  object: {
    foo: true
  }
};
console.log(json);
",
]
`;

exports[`Assets transforms example test case: native-current-lib 2`] = `
Array [
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets transforms example test case: native-experimental-lib 1`] = `
Array [
  "lib/index-native-experimental-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: experimental, Format: lib
'use strict';

require('../assets/styles-17df299b.css');

require('../assets/logo-c21f559f.svg');

require('website/src/css/custom.css');

const json = {
  list: [\\"foo\\", \\"bar\\", \\"baz\\"],
  number: 123,
  string: \\"abc\\",
  object: {
    foo: true
  }
};
console.log(json);
",
]
`;

exports[`Assets transforms example test case: native-experimental-lib 2`] = `
Array [
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets transforms example test case: native-legacy-lib 1`] = `
Array [
  "lib/index-native-legacy-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: legacy, Format: lib
'use strict';

require('../assets/styles-17df299b.css');

require('../assets/logo-c21f559f.svg');

require('website/src/css/custom.css');

var json = {
  list: [\\"foo\\", \\"bar\\", \\"baz\\"],
  number: 123,
  string: \\"abc\\",
  object: {
    foo: true
  }
};
console.log(json);
",
]
`;

exports[`Assets transforms example test case: native-legacy-lib 2`] = `
Array [
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets transforms example test case: native-stable-lib 1`] = `
Array [
  "lib/index-native-stable-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: stable, Format: lib
'use strict';

require('../assets/styles-17df299b.css');

require('../assets/logo-c21f559f.svg');

require('website/src/css/custom.css');

const json = {
  list: [\\"foo\\", \\"bar\\", \\"baz\\"],
  number: 123,
  string: \\"abc\\",
  object: {
    foo: true
  }
};
console.log(json);
",
]
`;

exports[`Assets transforms example test case: native-stable-lib 2`] = `
Array [
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets transforms example test case: node-current-cjs 1`] = `
Array [
  "cjs/index-node-current-cjs.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: cjs
'use strict';

require('../assets/styles-17df299b.css');

require('../assets/logo-c21f559f.svg');

require('website/src/css/custom.css');

const json = {
  list: [\\"foo\\", \\"bar\\", \\"baz\\"],
  number: 123,
  string: \\"abc\\",
  object: {
    foo: true
  }
};
console.log(json);
",
]
`;

exports[`Assets transforms example test case: node-current-cjs 2`] = `
Array [
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets transforms example test case: node-current-lib 1`] = `
Array [
  "lib/index-node-current-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: lib
'use strict';

require('../assets/styles-17df299b.css');

require('../assets/logo-c21f559f.svg');

require('website/src/css/custom.css');

const json = {
  list: [\\"foo\\", \\"bar\\", \\"baz\\"],
  number: 123,
  string: \\"abc\\",
  object: {
    foo: true
  }
};
console.log(json);
",
]
`;

exports[`Assets transforms example test case: node-current-lib 2`] = `
Array [
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets transforms example test case: node-current-mjs 1`] = `
Array [
  "mjs/index-node-current-mjs.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: mjs
import '../assets/styles-17df299b.css';
import '../assets/logo-c21f559f.svg';
import 'website/src/css/custom.css';
const json = {
  list: [\\"foo\\", \\"bar\\", \\"baz\\"],
  number: 123,
  string: \\"abc\\",
  object: {
    foo: true
  }
};
console.log(json);
",
]
`;

exports[`Assets transforms example test case: node-current-mjs 2`] = `
Array [
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets transforms example test case: node-experimental-cjs 1`] = `
Array [
  "cjs/index-node-experimental-cjs.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: cjs
'use strict';

require('../assets/styles-17df299b.css');

require('../assets/logo-c21f559f.svg');

require('website/src/css/custom.css');

const json = {
  list: [\\"foo\\", \\"bar\\", \\"baz\\"],
  number: 123,
  string: \\"abc\\",
  object: {
    foo: true
  }
};
console.log(json);
",
]
`;

exports[`Assets transforms example test case: node-experimental-cjs 2`] = `
Array [
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets transforms example test case: node-experimental-lib 1`] = `
Array [
  "lib/index-node-experimental-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: lib
'use strict';

require('../assets/styles-17df299b.css');

require('../assets/logo-c21f559f.svg');

require('website/src/css/custom.css');

const json = {
  list: [\\"foo\\", \\"bar\\", \\"baz\\"],
  number: 123,
  string: \\"abc\\",
  object: {
    foo: true
  }
};
console.log(json);
",
]
`;

exports[`Assets transforms example test case: node-experimental-lib 2`] = `
Array [
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets transforms example test case: node-experimental-mjs 1`] = `
Array [
  "mjs/index-node-experimental-mjs.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: mjs
import '../assets/styles-17df299b.css';
import '../assets/logo-c21f559f.svg';
import 'website/src/css/custom.css';
const json = {
  list: [\\"foo\\", \\"bar\\", \\"baz\\"],
  number: 123,
  string: \\"abc\\",
  object: {
    foo: true
  }
};
console.log(json);
",
]
`;

exports[`Assets transforms example test case: node-experimental-mjs 2`] = `
Array [
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets transforms example test case: node-legacy-cjs 1`] = `
Array [
  "cjs/index-node-legacy-cjs.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: cjs
'use strict';

require('../assets/styles-17df299b.css');

require('../assets/logo-c21f559f.svg');

require('website/src/css/custom.css');

var json = {
  list: [\\"foo\\", \\"bar\\", \\"baz\\"],
  number: 123,
  string: \\"abc\\",
  object: {
    foo: true
  }
};
console.log(json);
",
]
`;

exports[`Assets transforms example test case: node-legacy-cjs 2`] = `
Array [
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets transforms example test case: node-legacy-lib 1`] = `
Array [
  "lib/index-node-legacy-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: lib
'use strict';

require('../assets/styles-17df299b.css');

require('../assets/logo-c21f559f.svg');

require('website/src/css/custom.css');

var json = {
  list: [\\"foo\\", \\"bar\\", \\"baz\\"],
  number: 123,
  string: \\"abc\\",
  object: {
    foo: true
  }
};
console.log(json);
",
]
`;

exports[`Assets transforms example test case: node-legacy-lib 2`] = `
Array [
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets transforms example test case: node-legacy-mjs 1`] = `
Array [
  "mjs/index-node-legacy-mjs.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: mjs
import '../assets/styles-17df299b.css';
import '../assets/logo-c21f559f.svg';
import 'website/src/css/custom.css';
var json = {
  list: [\\"foo\\", \\"bar\\", \\"baz\\"],
  number: 123,
  string: \\"abc\\",
  object: {
    foo: true
  }
};
console.log(json);
",
]
`;

exports[`Assets transforms example test case: node-legacy-mjs 2`] = `
Array [
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets transforms example test case: node-stable-cjs 1`] = `
Array [
  "cjs/index-node-stable-cjs.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: cjs
'use strict';

require('../assets/styles-17df299b.css');

require('../assets/logo-c21f559f.svg');

require('website/src/css/custom.css');

const json = {
  list: [\\"foo\\", \\"bar\\", \\"baz\\"],
  number: 123,
  string: \\"abc\\",
  object: {
    foo: true
  }
};
console.log(json);
",
]
`;

exports[`Assets transforms example test case: node-stable-cjs 2`] = `
Array [
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets transforms example test case: node-stable-lib 1`] = `
Array [
  "lib/index-node-stable-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: lib
'use strict';

require('../assets/styles-17df299b.css');

require('../assets/logo-c21f559f.svg');

require('website/src/css/custom.css');

const json = {
  list: [\\"foo\\", \\"bar\\", \\"baz\\"],
  number: 123,
  string: \\"abc\\",
  object: {
    foo: true
  }
};
console.log(json);
",
]
`;

exports[`Assets transforms example test case: node-stable-lib 2`] = `
Array [
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets transforms example test case: node-stable-mjs 1`] = `
Array [
  "mjs/index-node-stable-mjs.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: mjs
import '../assets/styles-17df299b.css';
import '../assets/logo-c21f559f.svg';
import 'website/src/css/custom.css';
const json = {
  list: [\\"foo\\", \\"bar\\", \\"baz\\"],
  number: 123,
  string: \\"abc\\",
  object: {
    foo: true
  }
};
console.log(json);
",
]
`;

exports[`Assets transforms example test case: node-stable-mjs 2`] = `
Array [
  "styles.css",
  "assets/styles-17df299b.css",
]
`;
